[project]
name = "ws.dailycomics"
description = "Download webcomics to local folder"
version = "1.0.0"

dependencies = [
  "jinja2",
  "requests",
  "pyyaml",
]
optional-dependencies = {test=[
  "pytest",
]}

authors = [{name="Wolfgang Schnerring", email="wosc@wosc.de"}]
license = {text=" BSD-3-Clause"}
urls = {Repository="https://github.com/wosc/dailycomics"}
requires-python = ">=3.7"

[project.scripts]
dailycomics = "ws.dailycomics.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws"]
